--- a/app/includes/commons/_head.jade
+++ b/app/includes/commons/_head.jade
@@ -1,5 +1,4 @@
 head
     link(rel='stylesheet' href='TimeSeriesReader.min.css')
-    script(src='libs.js')
-    script(src='TimeSeriesReader.js')
+    script(src='TimeSeriesReader.min.js')
     title Time Series Reader
